fixes #169 (Mouse events don't reach map layer)
shrinks div that was covering entire map to a little invisible box on
top left corner of the map.

--- a/hw-mediawiki-extensions/HWMap-extension/modules/less/specialpage.less
+++ b/hw-mediawiki-extensions/HWMap-extension/modules/less/specialpage.less
@@ -264,4 +264,14 @@
     display: none;
   }
 
+  /*
+   * prevent this div from covering the entire map by making it a little square.
+   * it will stay on the top left corner of the map. incase anything will come up in this div, that's where it will be seen.
+   * more info on indicators, whatever they are: https://www.mediawiki.org/wiki/Help:Page_status_indicators
+  */
+  .mw-indicators {
+    height: 10px;
+    width: 10px;
+  }
+
 }
